name:                roman-numerals
version:             0.1.0.0
synopsis:            Roman numerals parsing
description:         Please see README.md
homepage:            https://github.com/githubuser/roman-numerals#readme
license:             BSD3
license-file:        LICENSE
author:              Remy D'Agostino
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RomanNumerals
                     , RomanNumerals.Types
                     , RomanNumerals.Parsing
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1.11 && < 3.2
  default-language:    Haskell2010

executable roman-numerals-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , roman-numerals
  default-language:    Haskell2010

test-suite roman-numerals-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , roman-numerals
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/roman-numerals
